--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter&family=JetBrains+Mono:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;700&display=swap');
 
 h3 {
     margin-bottom: 3rem;
@@ -16,11 +16,11 @@ p {
 }
 
 :root {
-    --font-body: 'Inter', sans-serif;
-    --font-heading: 'JetBrains Mono', monospace;
+    --font-body: 'Chakra Petch', sans-serif;
+    --font-heading: 'Chakra Petch', sans-serif;
     --background-color: #000000;
     --text-color: #ffffff;
-    --accent-color: #00ff55;
+    --accent-color: #c5c5c5;
 }
 
 @keyframes superCoolZoom {
@@ -48,12 +48,14 @@ body {
     background-color: var(--background-color);
     color: var(--text-color);
     line-height: 1.6;
-    min-height: 100vh;
-    margin: 20px;
+    height: 100vh;
+    margin: 0;
+    padding: 20px;
     position: relative;
     display: flex;
     flex-direction: column;
     overflow-x: hidden;
+    overflow-y: auto;
 }
 
 body::before {
@@ -120,12 +122,9 @@ header {
 
 footer {
     text-align: center;
-    padding: 10px 0;
     font-size: 0.8em;
     font-family: var(--font-body);
-    position: relative;
-    z-index: 1;
-    margin-top: auto;
+    padding: 10px 0;
 }
 
 #cohort-dates {
