--- a/styles.css
+++ b/styles.css
@@ -48,7 +48,7 @@ body {
     background-color: var(--background-color);
     color: var(--text-color);
     line-height: 1.6;
-    height: 100vh;
+    min-height: 100vh;
     margin: 0;
     padding: 20px;
     position: relative;
@@ -100,7 +100,8 @@ header {
     position: relative;
     z-index: 1;
     margin-top: 25px;
-    width: 50%;
+    width: 80%;
+    max-width: 800px;
     margin-left: auto;
     margin-right: auto;
 }
@@ -110,7 +111,8 @@ header {
     position: relative;
     z-index: 1;
     flex-grow: 1;
-    width: 50%;
+    width: 80%;
+    max-width: 800px;
     margin-left: auto;
     margin-right: auto;
 }
@@ -180,4 +182,10 @@ footer {
 .apply-button:active {
     transform: translateY(0) scale(0.98);
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+@media (min-width: 1024px) {
+    header, #content {
+        width: 50%;
+    }
 }
